scss/ui/_collapse.scss
.collapse-container {
  overflow: hidden;
  position: relative;
  /*transition: all 0.3s;*/
  height: 100%;
}

.collapse-container-no-height {
  overflow: hidden;
  position: relative;
  /*transition: all 0.3s;*/
}

.collapse {
  > .collapse-header {
    .rotate {
      &.icon {
        transition: all 0.3s ease;
      }
    }
  }
  &.expanded > .collapse-header {
    border-bottom: none;
    .rotate {
      &.icon {
        transform: rotate(90deg);
      }
    }
    .rotate-180 {
      &.icon {
        transform: rotate(180deg);
      }
    }
  }
  &.expanded {
    height: calc(100% - 2rem);
  }
}

